<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:id="@+id/relativeLayoutTop">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/homeIconMainAct"
            android:src="@drawable/home_icon"
            android:contentDescription="@string/contentDescription"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="73dp"
            android:padding="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:id="@+id/tittleMainAct"
            android:text="@string/Tittle"
            android:textSize="27sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@id/homeIconMainAct"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:padding="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:id="@+id/todayMainAct"
            android:text="@string/Today"
            android:textSize="19sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_below="@id/tittleMainAct"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:padding="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:id="@+id/dateMainAct"
            android:textSize="19sp"
            android:text="@string/time"
            android:textStyle="italic"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_below="@id/todayMainAct"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:padding="3dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yourListMainAct"
            android:text="@string/your_list"
            android:textSize="27sp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:textColor="@color/yellow"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMainAct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/yourListMainAct"
            android:padding="7dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddMainAct"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/contentDescriptionButton"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/yellow"
            android:src="@drawable/baseline_add_24" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_below="@+id/yourListMainAct"
            android:orientation="vertical">
            <TextView
                android:id="@+id/emptyStateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EmptyList"
                android:textSize="39sp"
                android:textStyle="italic"
                android:fontFamily="casual"
                android:textColor="@color/yellow"/>



        </LinearLayout>


    </RelativeLayout>




</LinearLayout>