<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/yellow"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="48dp"
                android:id="@+id/tvTittleRowItem"
                android:text="@string/TittleItem"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="27sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:id="@+id/iv_updateButtonRowItem"
                android:src="@drawable/baseline_edit_24"
                android:contentDescription="@string/contentDescription"
                android:layout_alignParentEnd="true"
                android:layout_alignEnd="@id/tvTittleRowItem" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="48dp"
            android:id="@+id/tvDescriptionRowItem"
            android:text="@string/Description"
            android:textSize="17sp"
            android:fontFamily="sans-serif-condensed-light"
            android:maxLines="2"
            android:layout_marginTop="5dp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>