<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="7dp"
    tools:context=".Views.DetailsActivity">
    
    <TextView
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:id="@+id/tvTittleDetailsAct"
        android:fontFamily="sans-serif-condensed-light"
        android:background="@drawable/edit_text_corner"
        android:textColor="@color/yellow"
        android:text="@string/TittleItem"
        android:textSize="19sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_marginStart="5dp"
        android:padding="7dp"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="goToHomePage"
        android:backgroundTint="@color/yellow"
        android:background="@drawable/home_icon"
        android:id="@+id/ivDoneDetailsAct"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/contentDescription"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/tvDescriptionDetailsAct"
        android:fontFamily="sans-serif-condensed-light"
        android:background="@drawable/edit_text_corner"
        android:textColor="@color/yellow"
        android:text="@string/Description"
        android:textSize="19sp"
        android:layout_below="@id/tvTittleDetailsAct"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        android:padding="7dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvDescriptionDetailsAct"
        android:background="@drawable/edit_text_corner"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerViewDetailsAct"
                android:padding="7dp"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/btnAddDetailsAct"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:onClick="allDelete"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/contentDescriptionButton"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/baseline_delete_forever_24"/>
    

</RelativeLayout>